# TysiacOnline

./: .gitignore  README.md  client.rar  sum__score_8hpp.html  sum__score_8hpp_source.html
client/: client.html  client.js  index.html  styles.css
docs/: adder_8cpp.html  adder_8hpp.html  adder_8hpp_source.html  annotated.html  bidder_8cpp.html  bidder_8hpp.html  bidder_8hpp_source.html  card_8cpp.html  card_8hpp.html  card_8hpp_source.html  chat__box_8cpp.html  chat__box_8hpp.html  chat__box_8hpp_source.html  class_adder-members.html  class_adder.html  class_bidder-members.html  (+154 more)
server/TysiacServer/: CMakeLists.txt  TysiacServer.sln  TysiacServer.vcxproj  TysiacServer.vcxproj.filters  main.cpp
server/TysiacServer/CMake/: CMakeCache.txt
server/TysiacServer/Test/TysiacServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TysiacServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
server/TysiacServer/engine/: Adder.cpp  Adder.hpp  Bidder.cpp  Bidder.hpp  CMakeLists.txt  Card.cpp  Card.hpp  ChatBox.cpp  ChatBox.hpp  ConstDefinitions.hpp  Controller.cpp  Controller.hpp  Dealer.cpp  Dealer.hpp  Deck.cpp  Deck.hpp  Game.cpp  Game.hpp  GameLogic.cpp  GameLogic.hpp  GameManager.cpp  GameManager.hpp  LeaveBuster.cpp  LeaveBuster.hpp  Player.cpp  Player.hpp  PlayersCollection.cpp  PlayersCollection.hpp  PlayersDeck.cpp  PlayersDeck.hpp  Room.cpp  Room.hpp  Score.cpp  Score.hpp  Starter.cpp  Starter.hpp  SumScore.cpp  SumScore.hpp  adder.cpp  adder.hpp  (+34 more)
server/TysiacServer/manager/: manager.cpp  manager.h
server/TysiacServer/network/: CMakeLists.txt  manager.cpp  manager.h  server.cpp  server.h  session.cpp  session.h
server/TysiacServer/tests/: CMakeLists.txt  TestFeatures.hpp  boost_unit_test.cpp  engine_tests.cpp  server_tests.cpp  test_main.cpp
(+139 files in other folders)
